# grout

./: .gitignore  Cargo.toml  README.md  bench.md
bench/: README.md  bench_transformers.py  compare.py  pyproject.toml  run_comparison.sh  schema.py
benchmarks/: profile_prefill_matmulslice_sm120.sh  sweep_pp.sh
paper-benchmarks/: README.md  RESULTS.md  aggregate_sweep.py  gemv_microbench.sh  profile_compare.sh  regen_grout.sh  run_all.sh  sweep_pp.sh  sweep_pp_sm120.sh  sweep_pp_tile.sh  sweep_tg.sh  sweep_tg_tile.sh
src/: cublas.rs  cuda_graph.rs  kernels.rs  lib.rs  loader.rs  main.rs  model.rs
tests/: e2e_generation.rs  kernels.rs
