[project]
name = "grout-bench"
version = "0.1.0"
description = "PyTorch transformers prefill baseline to compare against grout (cutile-rs)"
requires-python = ">=3.11"
dependencies = [
    # Matches the working torch on this machine (RTX 5070 Ti, Blackwell sm_120).
    # cu128 wheels support Blackwell. We load weights via safetensors directly,
    # so `accelerate` is NOT required.
    "torch>=2.7",
    "transformers>=4.45",
    "safetensors",
]

# Prefer the official PyTorch CUDA 12.8 index so uv picks Blackwell-capable wheels.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
